[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Television.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TV.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/SimpleBox.tres" type="Theme" id=3]
[ext_resource path="res://Assets/GUI/Montserrat-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 37
font_data = ExtResource( 4 )

[node name="TV" type="TextureRect"]
margin_left = 264.0
margin_top = 58.0
margin_right = 648.0
margin_bottom = 442.0
theme = ExtResource( 3 )
texture = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TVButton" type="Button" parent="StartScreen"]
margin_left = 181.0
margin_top = 198.0
margin_right = 293.0
margin_bottom = 286.0
text = "Watch TV"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesButton" type="Button" parent="StartScreen"]
margin_left = 56.0
margin_top = 198.0
margin_right = 168.0
margin_bottom = 286.0
text = "Play Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TVScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TVScreen"]
margin_left = 56.0
margin_top = 174.0
margin_right = 296.0
margin_bottom = 318.0
text = "Time passes as you watch TV...

You feel less stressed!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GamesScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GamesScreen"]
margin_left = 56.0
margin_top = 174.0
margin_right = 296.0
margin_bottom = 318.0
text = "You boot up your console. A long time passes as you play video games...

You feel much less stressed!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffScreen" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="OffScreen"]
margin_left = 56.0
margin_top = 158.0
margin_right = 296.0
margin_bottom = 334.0
custom_fonts/font = SubResource( 1 )
text = "NO POWER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartScreen/TVButton" to="." method="_on_TVButton_pressed"]
[connection signal="pressed" from="StartScreen/GamesButton" to="." method="_on_GamesButton_pressed"]
